# flatbuffers

./: BUILD.bazel  MODULE.bazel  build_defs.bzl
grpc/src/compiler/: BUILD.bazel
include/codegen/: BUILD.bazel
src/: BUILD.bazel
tests/: BUILD.bazel
