package(
    default_visibility = ["//visibility:private"],
)

filegroup(
    name = "distribution",
    srcs = [
        "BUILD.bazel",
    ] + glob([
        "*.cc",
        "*.h",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "python",
    srcs = ["python.cc"],
    hdrs = ["python.h"],
    strip_include_prefix = "/include",
    visibility = ["//src:__subpackages__"],
)
